k8s/backend-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: acmf-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: amcf-api
          image: <AWS_ACCOUNT_ID>.dkr.ecr.<AWS_REGION>.amazonaws.com/acmf-api:latest
          ports:
            - containerPort: 8080
